--- a/core/templates/core/pasien_riwayat_rm.html
+++ b/core/templates/core/pasien_riwayat_rm.html
@@ -128,9 +128,18 @@
                                     {% endif %}
                                 </td>
                                 <td class="align-middle text-center">
-                                    <a href="#" class="btn btn-primary btn-sm" title="Lihat Detail">
-                                        <i class="fa-solid fa-magnifying-glass"></i>
-                                    </a>
+                                    <a href="#" class="btn btn-primary btn-sm" data-toggle="dropdown" title="More" ><i class="fa-solid fa-ellipsis"></i></a>
+                                    <div class="dropdown-menu">
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'detail_rekam_medis' item.id %}">
+                                            <i class="fa-solid fa-magnifying-glass text-primary"></i> 
+                                            <span>Lihat Detail</span>
+                                            
+                                        </a>
+                                        <a class="dropdown-item d-flex align-items-center text-default" href="{% url 'edit_rekam_medis' item.id %}">
+                                            <i class="fa-solid fa-pencil text-primary"></i>
+                                            <span>Edit</span>
+                                        </a>
+                                    </div>
                                 </td>
                             </tr>
                             {% endfor %}
