--- a/core/templates/core/test.html
+++ b/core/templates/core/test.html
@@ -1,25 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Contoh Tab Bootstrap 5</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
-    <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="resume-tab" data-bs-toggle="tab" data-bs-target="#resume" type="button" role="tab">Resume Medis</button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="riwayat-tab" data-bs-toggle="tab" data-bs-target="#riwayat" type="button" role="tab">Riwayat Konsultasi</button>
-    </li>
-  </ul>
-
-  <div class="tab-content mt-3">
-    <div class="tab-pane fade show active" id="resume" role="tabpanel">Form Input Di Sini</div>
-    <div class="tab-pane fade" id="riwayat" role="tabpanel">Riwayat Di Sini</div>
-  </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</body>
+<html>
+  <head>
+    <title> Cara Membikin Surat </title>
+  </head>
+  <body bgcolor="white">
+    <font face="Arial" color="black"> <p align="center"> PEMERINTAH KOTA CIREBON </p></font>
+    <font face="Arial" color="blue"> <p align="center"> DINAS PENDIDIKAN </p></font>
+    <font face="Arial" color="green"> <p align="center"> SEKOLAH MENENGAH KEJURUAN NEGERI 1 CIREBON </p></font>
+    <font face="Arial" color="black" size="3"> <p align="center"> JL. Perjuangan By Pass Sunyaragi Telp.(0231) 123456 Cirebon 45141 </p></font>
+    <hr>
+    <font face="Arial" color="red" size="6"> <p align="center"> <u> <b> SURAT KETERANGAN PENELITIAN </b></u></font><br>
+      <font face="Arial" color="red" size="4"> Nomer: 8021/SMKN1/2015 </p></font>
+      <p align="center">
+        Berdasarkan surat dari Universitas Pendidikan Indonesia (UPI) Nomor 4609/UN404/DT/2014
+        tanggal 15 Desember 2015 perihal ijin melakukan penelitian, dengan ini kami menerangkan bahwa:
+      </p>
+      <pre>
+        Nama:Riffa Alfaridzi Priatna
+        NIM:0804252
+        Fakultas:Pendidikan Matematika dan Ilmu Pengetahuan Alam
+        Jurusan:Pendidikan Ilmu Komputer
+      </pre>
+      <p align="center"><font face="Arial">
+        Telah melakukan penelitian di sekolah kami tanggal<font color="red"> 7 s/d 21 Maret 2015</font>, dengan judul
+        "Penerapan Metode Pembelajaran IMPROVE Berbasis Multimedia Interaktif Untuk Meningkatkan
+        Intrapersonal intelegensi siswa dalam Mata Pelajaran TIK"
+      </font>
+    </p>
+  </body>
 </html>
